Remove specialized chunks